add user-detail interface
