# service/user.go
@@ -1,48 +1,41 @@
 package service
-//
-//import (
-//	"getcharzp.cn/define"
-//	"getcharzp.cn/helper"
-//	"getcharzp.cn/models"
-//	"github.com/gin-gonic/gin"
-//	"gorm.io/gorm"
-//	"log"
-//	"net/http"
-//	"strconv"
-//	"strings"
-//	"time"
-//)
-//
-//// GetUserDetail
-//// @Tags 公共方法
-//// @Summary 用户详情
-//// @Param identity query string false "problem identity"
-//// @Success 200 {string} json "{"code":"200","data":""}"
-//// @Router /user-detail [get]
-//func GetUserDetail(c *gin.Context) {
-//	identity := c.Query("identity")
-//	if identity == "" {
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "用户唯一标识不能为空",
-//		})
-//		return
-//	}
-//	data := new(models.UserBasic)
-//	err := models.DB.Omit("password").Where("identity = ? ", identity).Find(&data).Error
-//	if err != nil {
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "Get User Detail By Identity:" + identity + " Error:" + err.Error(),
-//		})
-//		return
-//	}
-//	c.JSON(http.StatusOK, gin.H{
-//		"code": 200,
-//		"data": data,
-//	})
-//}
-//
+
+import (
+	"YourProjectName/models"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// GetUserDetail
+// @Tags 公共方法
+// @Summary 用户详情
+// @Param identity query string false "problem identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /user-detail [get]
+func GetUserDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "用户唯一标识不能为空",
+		})
+		return
+	}
+	data := new(models.UserBasic)
+	err := models.DB.Omit("password").Where("identity = ? ", identity).Find(&data).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get User Detail By Identity:" + identity + " Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
+	})
+}
+
 //// Login
 //// @Tags 公共方法
 //// @Summary 用户登录
